# game.libretro.nx

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/nx/: CMakeLists.txt  nx.txt
game.libretro.nx/: addon.xml  addon.xml.in
gameclient.nx/: addon.xml
